# libm2_vad

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
lib_srcs/: CMakeLists.txt  m2_ns.c  m2_ns.h  m2_vad.c  m2_vad.h
lib_srcs/common/: defines.h  signal_processing_library.h  spl_inl.h  typedefs.h
lib_srcs/ns/: fft4g.c  fft4g.h  noise_suppression.c  noise_suppression.h  ns_core.c  ns_core.h  windows_private.h
lib_srcs/vad/: division_operations.c  energy.c  get_scaling_square.c  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_gmm.h  vad_sp.c  vad_sp.h  webrtc_vad.c  webrtc_vad.h
m2NoiseReducer/: CMakeLists.txt  PCMHeader.h  main.c
m2Splitter/: CMakeLists.txt  main.c
output/: .gitkeep
