project(m2vad)
file(GLOB_RECURSE ALL_CODE_FILES PROJECT_SOURCE_DIR *.c)
foreach(loop_var IN LISTS ALL_CODE_FILES)
	message(${loop_var})
endforeach(loop_var)
add_library(${PROJECT_NAME} STATIC SHARED ${ALL_CODE_FILES})
set(INCLUDE_FILES ${PROJECT_SOURCE_DIR}/m2_vad.h ${PROJECT_SOURCE_DIR}/m2_ns.h)
install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_SOURCE_DIR}/output/lib)
install(FILES ${INCLUDE_FILES} DESTINATION ${CMAKE_SOURCE_DIR}/output/include/m2_vad)
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND make install)